--- a/animentnu/package.json
+++ b/animentnu/package.json
@@ -13,6 +13,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-infinite-scroll-component": "^5.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-sortable-hoc": "^1.11.0",
